# django-render-boilerplate

./: .env  pyproject.toml  requirements.txt
mysite/: settings.py
render/templates/render/: index.html
