[tool.poetry]
name = "mysite"
version = "0.1.0"
description = ""
authors = ["ramonfrombr <ramonfrombr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "=3.2"
dj-database-url = "^2.0.0"
psycopg2-binary = "^2.9.6"
whitenoise = {extras = ["brotli"], version = "^6.4.0"}
gunicorn = "^20.1.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
